added Database of logo and trailers

--- a/frontend/index2.html
+++ b/frontend/index2.html
@@ -36,7 +36,7 @@
     </head>
     <body>
        <a href="index.html"> 
-    <img id="logo" src="/Users/avisahney/Downloads/vstreamlogo.png" alt="Logo" >
+    <img id="logo" src="../Database/vstreamlogo.png" alt="Logo" >
      </a> 
         <video id="videoPlayer" width="100%" controls muted autoplay>
             <source id="videoSource" type="video/mp4" />
