--- a/frontend/index.html
+++ b/frontend/index.html
@@ -42,42 +42,42 @@
     </style>
 </head>
 <body>
-    <img id="logo" src="/Users/avisahney/Downloads/vstreamlogo.png" alt="Logo" >
+    <img id="logo" src="../Database/vstreamlogo.png" alt="Logo" >
     <ul>
         <li>
             <a href="index2.html?name=Jawan.mp4">
-                <img src="/Users/avisahney/Downloads/Jawanthumb.jpeg" alt="Jawan Trailer Thumbnail">
+                <img src="../Database/Jawanthumb.jpeg" alt="Jawan Trailer Thumbnail">
                 Jawan Trailer
             </a>
         </li>
         <li>
             <a href="index2.html?name=song1.mp4">
-                <img src="/Users/avisahney/Downloads/Bawaalthumb.jpeg" alt="Tumhe Kitna Pyaar Karte Song Thumbnail">
+                <img src="../Database/Bawaalthumb.jpeg" alt="Tumhe Kitna Pyaar Karte Song Thumbnail">
                 Tumhe Kitna Pyaar Karte Song
             </a>
         </li>
         <li>
             <a href="index2.html?name=relax.mp4">
-                <img src="/Users/avisahney/Downloads/relaxthumb.png" alt="Relax song Thumbnail">
+                <img src="../Database/relaxthumb.png" alt="Relax song Thumbnail">
                 Indonesia - Relaxing Music Along With Beautiful Nature Videos
             </a>
         </li>
         <li>
             <a href="index2.html?name=song2.mp4">
-                <img src="/Users/avisahney/Downloads/Laalthumb.jpeg" alt="Tere hawale Song Thumbnail">
+                <img src="../Database/Laalthumb.jpeg" alt="Tere hawale Song Thumbnail">
                 Tere Hawale song
             </a>
         </li>
         <li>
             <a href="index2.html?name=baadshah.mp4">
-                <img src="/Users/avisahney/Downloads/baadshahthumb.jpeg" alt="baadshah movie Thumbnail">
+                <img src="../Database/baadshahthumb.jpeg" alt="baadshah movie Thumbnail">
                 Baadshah movie
             </a>
         </li>
         <li>
             <a href="index2.html?name=baadshahh.mp4">
-                <img src="/Users/avisahney/Downloads/baadshahthumb.jpeg" alt="baadshah movie Thumbnail">
-                Baadshah movie
+                <img src="../Database/baadshahthumb.jpeg" alt="baadshah movie Thumbnail">
+                Wrong location movie - will give error
             </a>
         </li>
     </ul>
