--- a/frontend/index.html
+++ b/frontend/index.html
@@ -45,37 +45,37 @@
     <img id="logo" src="../Database/vstreamlogo.png" alt="Logo" >
     <ul>
         <li>
-            <a href="index2.html?name=Jawan.mp4">
+            <a href="playVideo.html?name=Jawan.mp4">
                 <img src="../Database/Jawanthumb.jpeg" alt="Jawan Trailer Thumbnail">
                 Jawan Trailer
             </a>
         </li>
         <li>
-            <a href="index2.html?name=song1.mp4">
+            <a href="playVideo.html?name=song1.mp4">
                 <img src="../Database/Bawaalthumb.jpeg" alt="Tumhe Kitna Pyaar Karte Song Thumbnail">
                 Tumhe Kitna Pyaar Karte Song
             </a>
         </li>
         <li>
-            <a href="index2.html?name=relax.mp4">
+            <a href="playVideo.html?name=relax.mp4">
                 <img src="../Database/relaxthumb.png" alt="Relax song Thumbnail">
                 Indonesia - Relaxing Music Along With Beautiful Nature Videos
             </a>
         </li>
         <li>
-            <a href="index2.html?name=song2.mp4">
+            <a href="playVideo.html?name=song2.mp4">
                 <img src="../Database/Laalthumb.jpeg" alt="Tere hawale Song Thumbnail">
                 Tere Hawale song
             </a>
         </li>
         <li>
-            <a href="index2.html?name=baadshah.mp4">
+            <a href="playVideo.html?name=baadshah.mp4">
                 <img src="../Database/baadshahthumb.jpeg" alt="baadshah movie Thumbnail">
                 Baadshah movie
             </a>
         </li>
         <li>
-            <a href="index2.html?name=baadshahh.mp4">
+            <a href="playVideo.html?name=baadshahh.mp4">
                 <img src="../Database/baadshahthumb.jpeg" alt="baadshah movie Thumbnail">
                 Wrong location movie - will give error
             </a>
